<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/a_setting_ct"
    android:background="@mipmap/bg_nhanvien"
    tools:context=".Splash">



    <TextView
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/thietlaptitle"
        android:gravity="center"
        android:text="@string/thietlapquatang"
        android:layout_width="wrap_content"
        android:textColor="@color/cl_textsetting"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:src="@mipmap/bg_bnt_dangnhap"/>

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="50dp"
        android:id="@+id/scrollview"
        app:layout_constraintTop_toBottomOf="@id/thietlaptitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/table"
                app:layout_constraintTop_toBottomOf="@id/thietlaptitle"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                >
                <TableRow android:padding="5dp">
                    <TextView android:text="@string/tenqua"
                        android:textStyle="bold"
                        style="@style/textwrap"/>
                    <TextView android:text="@string/soqua"
                        android:textStyle="bold"
                        style="@style/textwrap"/>
                    <TextView android:text="@string/tile"
                        android:textStyle="bold"
                        android:visibility="gone"
                        style="@style/textwrap"/>

                    <TextView android:text="@string/sodatrao"
                        android:textStyle="bold"
                        style="@style/textwrap"/>
                    <TextView android:text="@string/conlai"
                        android:textStyle="bold"
                        style="@style/textwrap"/>
                </TableRow>

                <TableRow android:layout_margin="5dp">
                    <TextView android:id="@+id/tv_qua1"
                        android:text="@string/q1name"
                        android:textStyle="bold" android:layout_width="190dp"
                        style="@style/text_setting_item"/>

                    <EditText
                        android:id="@+id/tv_qua1_soqua"
                        style="@style/text_setting_item"/>

                    <EditText android:id="@+id/tv_qua1_tile"
                        style="@style/text_setting_item"
                        android:visibility="gone"
                        />

                    <TextView android:id="@+id/tv_qua1_sotrao"
                        style="@style/text_setting_item"/>

                    <TextView android:id="@+id/tv_qua1_conlai"
                        style="@style/text_setting_item"/>

                </TableRow>

                <TableRow android:layout_margin="5dp">
                    <TextView android:id="@+id/tv_qua2"
                        android:text="@string/q2name"
                        android:textStyle="bold"
                        style="@style/text_setting_item"/>

                    <EditText
                        android:id="@+id/tv_qua2_soqua"
                        style="@style/text_setting_item"/>

                    <EditText android:id="@+id/tv_qua2_tile"
                        style="@style/text_setting_item"
                        android:visibility="gone"
                        />

                    <TextView android:id="@+id/tv_qua2_sotrao"
                        style="@style/text_setting_item"/>

                    <TextView android:id="@+id/tv_qua2_conlai"
                        style="@style/text_setting_item"/>

                </TableRow>

                <TableRow android:layout_margin="5dp">
                    <TextView android:id="@+id/tv_qua3"
                        android:text="@string/q3name"
                        android:textStyle="bold"
                        style="@style/text_setting_item"/>

                    <EditText
                        android:id="@+id/tv_qua3_soqua"
                        style="@style/text_setting_item"/>

                    <EditText android:id="@+id/tv_qua3_tile"
                        android:visibility="gone"
                        style="@style/text_setting_item"/>

                    <TextView android:id="@+id/tv_qua3_sotrao"
                        style="@style/text_setting_item"/>

                    <TextView android:id="@+id/tv_qua3_conlai"
                        style="@style/text_setting_item"/>

                </TableRow>

                <TableRow android:layout_margin="5dp">
                    <TextView android:id="@+id/tv_qua4"
                        android:text="@string/q4name"
                        android:textStyle="bold"
                        style="@style/text_setting_item"/>

                    <EditText
                        android:id="@+id/tv_qua4_soqua"
                        style="@style/text_setting_item"/>

                    <EditText android:id="@+id/tv_qua4_tile"
                        android:visibility="gone"
                        style="@style/text_setting_item"/>

                    <TextView android:id="@+id/tv_qua4_sotrao"
                        style="@style/text_setting_item"/>

                    <TextView android:id="@+id/tv_qua4_conlai"
                        style="@style/text_setting_item"/>

                </TableRow>

                <TableRow android:layout_margin="5dp">
                    <TextView android:id="@+id/tv_qua5"
                        android:text="@string/q5name"
                        android:textStyle="bold"
                        style="@style/text_setting_item"/>

                    <EditText
                        android:id="@+id/tv_qua5_soqua"
                        style="@style/text_setting_item"/>

                    <EditText android:id="@+id/tv_qua5_tile"
                        android:visibility="gone"
                        style="@style/text_setting_item"/>

                    <TextView android:id="@+id/tv_qua5_sotrao"
                        style="@style/text_setting_item"/>

                    <TextView android:id="@+id/tv_qua5_conlai"
                        style="@style/text_setting_item"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>







    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/a_setting_tv_luu"
            android:gravity="center"
            android:text="@string/luulai"
            android:background="@drawable/bg_blue"
            android:textColor="@color/white"
            android:layout_width="@dimen/bnt_setting_w"
            android:layout_height="@dimen/bnt_setting_h"
            android:textStyle="bold"
            android:textSize="20sp"
            android:src="@mipmap/bg_bnt_dangnhap"/>

        <TextView
            android:layout_marginLeft="20dp"
            android:id="@+id/a_setting_tv_reset"
            android:gravity="center"
            android:text="@string/reset"
            android:background="@drawable/bg_blue"
            android:textColor="@color/white"
            android:layout_width="@dimen/bnt_setting_w"
            android:layout_height="@dimen/bnt_setting_h"
            android:textStyle="bold"
            android:textSize="20sp"
            android:src="@mipmap/bg_bnt_dangnhap"/>

        <TextView
            android:layout_marginLeft="20dp"
            android:id="@+id/a_setting_tv_quaylai"
            android:gravity="center"
            android:text="@string/qualai"
            android:background="@drawable/bg_blue"
            android:textColor="@color/white"
            android:layout_width="@dimen/bnt_setting_w"
            android:layout_height="@dimen/bnt_setting_h"
            android:textStyle="bold"
            android:textSize="20sp"
            android:src="@mipmap/bg_bnt_dangnhap"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>