<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/a_setting_ct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_nhanvien_new"
    tools:context=".Splash">


    <TextView
        android:id="@+id/thietlaptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:src="@mipmap/bg_bnt_dangnhap"
        android:text="@string/thietlapquatang"
        android:textColor="@color/cl_textsetting"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/thietlaptitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thietlaptitle">

                <TableRow>

                    <TextView
                        style="@style/textwrapNew"
                        android:text="@string/phanqua"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/textwrapNew"
                        android:text="@string/soqua_cap"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/textwrapNew"
                        android:text="@string/tile_cap"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        style="@style/textwrapNew"
                        android:text="@string/sodatrao_cap"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/textwrapNew"
                        android:text="@string/conlai_cap"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_qua1"
                        style="@style/text_setting_item_new"
                        android:layout_width="wrap_content"
                        android:text="@string/q1nameV2"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/tv_qua1_soqua"
                        style="@style/text_setting_item_new" />

                    <EditText
                        android:id="@+id/tv_qua1_tile"
                        style="@style/text_setting_item_new"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_qua1_sotrao"
                        style="@style/text_setting_item_new" />

                    <TextView
                        android:id="@+id/tv_qua1_conlai"
                        style="@style/text_setting_item_new" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_qua2"
                        style="@style/text_setting_item_new"
                        android:text="@string/q2nameV2"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/tv_qua2_soqua"
                        style="@style/text_setting_item_new" />

                    <EditText
                        android:id="@+id/tv_qua2_tile"
                        style="@style/text_setting_item_new"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_qua2_sotrao"
                        style="@style/text_setting_item_new" />

                    <TextView
                        android:id="@+id/tv_qua2_conlai"
                        style="@style/text_setting_item_new" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_qua3"
                        style="@style/text_setting_item_new"
                        android:text="@string/q3nameV2"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/tv_qua3_soqua"
                        style="@style/text_setting_item_new" />

                    <EditText
                        android:id="@+id/tv_qua3_tile"
                        style="@style/text_setting_item_new"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_qua3_sotrao"
                        style="@style/text_setting_item_new" />

                    <TextView
                        android:id="@+id/tv_qua3_conlai"
                        style="@style/text_setting_item_new" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_qua4"
                        style="@style/text_setting_item_new"
                        android:text="@string/q4nameV2"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/tv_qua4_soqua"
                        style="@style/text_setting_item_new" />

                    <EditText
                        android:id="@+id/tv_qua4_tile"
                        style="@style/text_setting_item_new"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_qua4_sotrao"
                        style="@style/text_setting_item_new" />

                    <TextView
                        android:id="@+id/tv_qua4_conlai"
                        style="@style/text_setting_item_new" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_qua5"
                        style="@style/text_setting_item_new"
                        android:text="@string/q5nameV2"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/tv_qua5_soqua"
                        style="@style/text_setting_item_new" />

                    <EditText
                        android:id="@+id/tv_qua5_tile"
                        style="@style/text_setting_item_new"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_qua5_sotrao"
                        style="@style/text_setting_item_new" />

                    <TextView
                        android:id="@+id/tv_qua5_conlai"
                        style="@style/text_setting_item_new" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_qua6"
                        style="@style/text_setting_item_new"
                        android:text="@string/q6nameV2"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/tv_qua6_soqua"
                        style="@style/text_setting_item_new" />

                    <EditText
                        android:id="@+id/tv_qua6_tile"
                        style="@style/text_setting_item_new"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_qua6_sotrao"
                        style="@style/text_setting_item_new" />

                    <TextView
                        android:id="@+id/tv_qua6_conlai"
                        style="@style/text_setting_item_new" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/scrollview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/a_setting_tv_reset"
            android:layout_width="@dimen/bnt_setting_w2"
            android:layout_height="@dimen/bnt_setting_h"
            android:background="@drawable/bg_gradient_green"
            android:gravity="center"
            android:src="@mipmap/bg_bnt_dangnhap"
            android:text="@string/reset_new"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/a_setting_tv_luu"
            android:layout_width="@dimen/bnt_setting_w2"
            android:layout_height="@dimen/bnt_setting_h"
            android:layout_marginLeft="20dp"
            android:background="@drawable/bg_gradient_green"
            android:gravity="center"
            android:src="@mipmap/bg_bnt_dangnhap"
            android:text="@string/luulai"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/a_setting_tv_quaylai"
            android:layout_width="@dimen/bnt_setting_w2"
            android:layout_height="@dimen/bnt_setting_h"
            android:layout_marginLeft="20dp"
            android:background="@drawable/bg_gradient_green"
            android:gravity="center"
            android:src="@mipmap/bg_bnt_dangnhap"
            android:text="@string/qualai"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>